MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
vNext
----------
- [PATCH] Updating JSON version (#1932)

Version 4.9.0
----------
- [PATCH] Update common @16.1.0
- [MINOR] Adding webauthn_capable property option for MSAL config files (#1895)

Version 4.8.1
----------
- [MINOR] Add LTW as prod broker app (#2179)
- [PATCH] Update common @16.0.1

Version 4.8.0
----------
- [MINOR] Use Active Broker cache specifically for Client SDK (#1892)
- [MINOR] MSA UI tests for Brokered Auth (#1856)
- [MINOR] Updated target, compile SDK, AGP and gradle versions(#1882)
- [PATCH] Update common @16.0.0

Version 4.7.0
----------
- [MINOR] MsalTestApp uses 1.4.0 for com.microsoft.identity.client:opentelemetry.exporter (#1878)
- [PATCH] Accommodating broker validator refactoring (#1851)
- [MINOR] Update YubiKit version to 2.3.0 (#1854)
- [PATCH] Update common @15.0.0

Version 4.6.3
----------
- [PATCH] Update common @14.0.1

Version 4.6.2
----------
- [PATCH] Wire new Broker Discovery Client into MSAL - still disabled by default (#1835)
- [PATCH] Update common @14.0.0

Version 4.6.1
----------
- [PATCH] Version 4.6.0 was built with common which had lint errors, updating common after fixing the errors
- [MINOR] Replacing SHA-1 used in broker validation with SHA-512 (#1826)
- [PATCH] Update common @13.0.1

Version 4.5.0
----------
- [MINOR] Changes to support MSA accounts in Broker (#1793)
- [PATCH] Update common @12.0.0

Version 4.4.0
----------
- [PATCH] Update common @11.0.0
- [MINOR] Support CIAM Authority Type (#1783)
- [MINOR] Bumping YubiKit Versions to 2.2.0 (#1784)

Version 4.3.1
----------
- [PATCH] Version 4.3.0 was built with RC versions, just need to bump version to 4.3.1
- [MINOR] Add preferred browser support (#1761)
- [MINOR] Adding sub error codes to MsalUiRequiredException (#1758)
- [MINOR] Wrap Runnable with Current Telemetry Context (#1747)

Version 4.2.0
----------
- [PATCH] Update common @10.0.0

Version 4.1.3
----------